Alignment and font size fixes

--- a/assets/stylesheets/common/discourse-policy.scss
+++ b/assets/stylesheets/common/discourse-policy.scss
@@ -12,7 +12,7 @@
     padding: 10px;
     margin-top: 30px;
     line-height: $line-height-small;
-
+    align-items: center;
     display: flex;
     justify-content: space-between;
 
@@ -23,37 +23,44 @@
       a.toggle {
         display: flex;
         align-items: center;
-        font-size: $font-up-2;
-        margin-right: 10px;
+        font-size: $font-up-1;
       }
       .seperator {
-        height: 28px;
         border-right: 2px solid $primary-low;
+        margin: 0 10px;
+        height: 28px;
       }
 
       .users {
-        margin-right: 5px;
+        margin-left: 10px;
+
         img {
           margin: 1px;
         }
       }
     }
 
+    .toggle,
+    .user-lists,
+    .users {
+      height: 100%;
+    }
+
     a.toggle-not-accepted {
       color: dark-light-choose($primary-medium, $secondary-medium);
-      margin-left: 15px;
-      margin-right: 5px;
+      .d-icon {
+      }
     }
 
     a.toggle-accepted {
       color: green;
-      margin-right: 5px;
     }
 
     .toggle-accepted,
     .toggle-not-accepted {
-      .d-icon {
-        margin-right: 4px;
+      .user-count {
+        margin-left: 5px;
+        font-size: $font-up-1;
       }
     }
 
